# automation_test

./: README.md
auto-app-test/: .env.example  .gitignore  README.md  pyproject.toml  run_tests.sh
auto-app-test/docs/: 01-getting-started.md  02-project-structure.md  03-capabilities-and-env.md  04-running-and-parallel.md  05-reporting.md  06-page-object-guide.md  07-ci-jenkins.md  08-troubleshooting.md
auto-app-test/jenkins-bs/: README.md
auto-app-test/jenkins-script/: README.md
auto-app-test/local_jenkins/: README.md
auto-app-test/res/config/: common.json  conf_bs_aos.json  conf_bs_ios.json  conf_local_aos.json  conf_local_ios.json  target_app_info.json
auto-app-test/src/appium_pom/: __init__.py  cli.py
auto-app-test/src/appium_pom/config/: app_config.py  paths.py  server_env.py
auto-app-test/src/appium_pom/driver/: driver_factory.py
auto-app-test/src/appium_pom/pages/: base_page.py
auto-app-test/src/appium_pom/pages/common/: module_common.py  module_precondition.py  module_scenario.py
auto-app-test/src/appium_pom/pages/example/: home_page.py
auto-app-test/src/appium_pom/utils/: caps_loader.py  logger.py  port_allocator.py
auto-app-test/src/appium_pom/utils/locator_handler/: __init__.py  accessibility_id.py  text.py  xpath.py
auto-app-test/tests/: conftest.py
auto-app-test/tests/suite_no1/: test_smoke_example.py
auto-app-test/tests/suite_no2/: test_sample_placeholder.py
